--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,7 @@ body {
   width: 12rem;
   aspect-ratio: 1;
   align-self: start;
+  border-radius: 5px;
 }
 
 .pizza div {
@@ -168,10 +169,11 @@ body {
   border: none;
   font-size: 1.4rem;
   font-weight: 500;
-  background-color: #edc84b;
+  background-color: #edc74d;
   padding: 1.4rem 3.2rem;
   cursor: pointer;
   transition: all 0.2s;
+  border-radius: 7px;
 }
 
 .btn:hover {
